; ModuleID = '/home/carl/AnghaBench/tmux/extr_layout.c_layout_set_size.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_layout.c_layout_set_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.layout_cell = type { i8*, i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @layout_set_size(%struct.layout_cell* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca %struct.layout_cell*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store %struct.layout_cell* %0, %struct.layout_cell** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load %struct.layout_cell*, %struct.layout_cell** %6, align 8
  %13 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %12, i32 0, i32 3
  store i8* %11, i8** %13, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = load %struct.layout_cell*, %struct.layout_cell** %6, align 8
  %16 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %15, i32 0, i32 2
  store i8* %14, i8** %16, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = load %struct.layout_cell*, %struct.layout_cell** %6, align 8
  %19 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %18, i32 0, i32 1
  store i8* %17, i8** %19, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = load %struct.layout_cell*, %struct.layout_cell** %6, align 8
  %22 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %21, i32 0, i32 0
  store i8* %20, i8** %22, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
